<resources>
    <string name="app_name">Swift</string>
    <string name="EverywhereDictionary">Everywhere Dictionary</string>
    <string name="no_internet">No Internet connection</string>
    <string name="TIMEOUT_ERROR">Timeout please try again</string>
    <string name="SERVER_ERROR">Server error</string>
    <string name="NETWORK_ERROR">Network error</string>
    <string name="PARSE_ERROR">Parse error</string>
    <string name="Search">Search</string>
    <string name="type">Type here</string>
    <string name="Cancel">Cancel</string>

    <string name="launcher_icon_credit"><div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="click_to_search">Click to search words</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="contemporary">Modern</string>
    <string name="Active">Active</string>
    <string name="Wordwise">Wordwise</string>
    <string name="no_word_found">Sorry,Search query not found.</string>
    <string name="channel_name">Swift Dictionary</string>
    <string name="channel_description">Search meaning from anywhere in th device with a click on Swift notification.</string>
    <string name="search">Search here</string>
    <string name="Close">Close</string>
    <string name="Enble_swift">Enable Swift Dictionary</string>
    <string name="instructions">Step 1. Enable Swift dictionary activating above button \n \nStep 2. You can find swift notification on Notification bar\n \nStep 3. Click notification to open dictionary from anywhere in the phone from any app\n \nStep 4. If you like it please rate the application in the Google Playstore.
    </string>

    <string name="ADMOBID">ca-app-pub-9653011938091807~3092157308</string>
    <string name="BANNER_ADMOBID">ca-app-pub-9653011938091807/3565981784</string>
    <string name="INTERTIAL_ADMOBID">ca-app-pub-9653011938091807/7750421762</string>
    <string name="Thanks">Thanks For Using Our app.\n \nCheck notification to use swift dictionary \n\nIf you like our app Please Rate us on Play Store</string>
    <string name="write_to_us">Write to us</string>
    <string name="rate">Rate Swift</string>
    <string name="try_quotzy">Install Quotzy</string>
    <string name="license">Swift Licensed under Apache 2.0</string>
    <string name="Synonyms">Synonyms</string>
    <string name="Antonyms">Antonyms</string>
</resources>
