<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:elevation="4dp"
    tools:context=".ui.MainActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:elevation="0dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/material_text_display1"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_head"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_below="@id/head"
                android:layout_margin="@dimen/margin2"
                android:background="@drawable/rounded_rect_white"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/Enble_swift"
                android:textAlignment="textStart"
                android:textSize="@dimen/material_text_title"
                tools:ignore="RtlCompat" />

            <Switch
                android:id="@+id/enable_button"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/head"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin2"
                android:background="@drawable/rounded_rect_color"
                android:elevation="4dp"
                android:gravity="center"
                android:padding="16dp" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enable_button"
                android:layout_margin="@dimen/margin2"
                android:background="@drawable/rounded_rect_white"
                android:elevation="4dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:padding="16dp"
                android:text="@string/instructions"
                android:textAlignment="textStart"
                android:textSize="@dimen/material_text_subhead" />

            <RelativeLayout
                android:id="@+id/instructions2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instructions"
                android:layout_margin="@dimen/margin2"
                android:background="@drawable/rounded_rect_white"
                android:elevation="4dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/write"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:tint="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/rate"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_star_black_24dp"
                    android:tint="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/quotzy"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_quotzy" />

                <TextView
                    android:id="@+id/write_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/write"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/write_to_us"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:id="@+id/rate_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/write"
                    android:layout_centerHorizontal="true"
                    android:padding="4dp"
                    android:text="@string/rate"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:id="@+id/quotzy_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/write"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:padding="4dp"
                    android:text="@string/try_quotzy"
                    android:textColor="@color/textColorPrimary" />

            </RelativeLayout>

            <TextView
                android:id="@+id/reserved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/instructions2"
                android:layout_centerHorizontal="true"
                android:alpha="0.4"
                android:padding="4dp"
                android:text="@string/license"
                android:textColor="@color/textColorPrimary" />

        </RelativeLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:elevation="4dp"

        ads:adSize="BANNER"
        ads:adUnitId="@string/BANNER_ADMOBID" />
</RelativeLayout>