<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/std_padding"
    android:background="@drawable/rounded_rect_white"
    android:elevation="4dp">

    <LinearLayout
        android:id="@+id/root_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rect_b_r_colored"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="@dimen/std_padding"
            android:text="@string/EverywhereDictionary"
            android:textAlignment="center"
            android:textColor="@android:color/white"

            android:textSize="@dimen/material_text_headline" />

        <EditText
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/std_padding"
            android:background="@drawable/rounded_rect_white"
            android:gravity="start"
            android:hint="@string/type"
            android:padding="@dimen/std_padding"
            android:textColor="@color/textColorPrimary" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/data_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin1"
            android:gravity="start"
            android:padding="@dimen/std_padding"
            android:text="@string/EverywhereDictionary"
            android:textColor="@color/textColorPrimary"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/std_padding"
                android:layout_weight="1"
                android:background="@drawable/rounded_rect_color"
                android:gravity="center"
                android:padding="@dimen/std_padding"
                android:text="@string/Cancel"
                android:textAlignment="center"
                android:textColor="@color/textColorPrimary" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/std_padding"
                android:layout_weight="1"

                android:background="@drawable/rounded_rect_color"
                android:gravity="center"
                android:padding="@dimen/std_padding"
                android:text="@string/Search"
                android:textAlignment="center"
                android:textColor="@color/textColorPrimary" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>